<resources>
    <string name="app_name">DreamCatcher</string>
    <string name="dream_label">Dream</string>
    <string name="entries_label">Entries</string>
    <string name="fulfilled">Fulfilled</string>
    <string name="deferred">Deferred</string>
    <string name="last_updated_text">Last_updated_text</string>
    <string name="reflection_count">Reflections: %1$d</string>
    <string name="last_updated">Last updated %1$s</string>
    <string name="reflection_dialog_title">Add Reflection</string>
    <string name="reflection_dialog_positive">Add</string>
    <string name="reflection_dialog_negative">Cancel</string>
    <string name="reflection_text">Enter Reflection Text</string>
    <string name="new_dream">New Dream</string>
    <string name="share_dream">Share Dream</string>
    <string name="take_photo">Take Photo</string>

    <string name="last_updated_format">\'Last updated\' yyyy-MM-dd \'at\' hh:mm:ss A</string>
    <string name="last_updated_share_format">\'Last updated\' yyyy-MM-dd</string>
    <string name="no_dreams">No Dreams</string>
</resources>