<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dream_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/dream_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:text="Dream Title"
                    tools:ignore="LabelFor" />

                <TextView
                    android:id="@+id/last_updated_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/last_updated"
                    android:textAlignment="center" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/fulfilled_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/fulfilled" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <CheckBox
                        android:id="@+id/deferred_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/deferred" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entries_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

        <Button
            android:id="@+id/entry_0_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            tools:text="Button" />

        <Button
            android:id="@+id/entry_1_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            tools:text="Button" />

        <Button
            android:id="@+id/entry_2_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            tools:text="Button" />

        <Button
            android:id="@+id/entry_3_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            tools:text="Button" />

        <Button
            android:id="@+id/entry_4_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            tools:text="Button" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_reflection_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:clickable="true"
        android:src="@android:drawable/ic_input_add" />
</LinearLayout>